--- a/FDFk7/FDFk7/css/app.css
+++ b/FDFk7/FDFk7/css/app.css
@@ -36,6 +36,11 @@ h2{
 
 /* ------- Custom paddign ------- */
 
+.horisontal-buffer-small{
+    margin-top:25px;
+    margin-bottom:25px;
+    }
+
 .top-buffer-small { 
     margin-top:25px; 
 }
